main picture needs to be responsive

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
            <h2>Love hiking</h2>
            <h3>Iceland & Dublin </h3>
          </div>
+         </div>
     </section>
     <section id="info">
         <h1 id="promo-question">Why love hiking with Us</h1>
