added content to about section

--- a/index.html
+++ b/index.html
@@ -43,12 +43,20 @@
             <div class="left-about-info">
               <h2>Feel healthy <i class="fas fa-heartbeat"></i></h2> 
               <hr>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officia dignissimos rem blanditiis sed vero, labore eum sint numquam, alias similique architecto eaque distinctio quis minima dolore dolores possimus consequuntur.</p>
+              <p>Hiking outdoors has plenty of perks: nice views, fresh air, and the sounds and smells of nature.
+
+                It's good for you, too. Hiking is a powerful cardio workout that can:
+                
+                    Lower your risk of heart disease
+                    Improve your blood pressure and blood sugar levels
+                    Boost bone density, since walking is a weight-bearing exercise
+                    Build strength in your glutes, quadriceps, hamstrings, and the muscles in your hips and lower legs
+                    Strengthen your core</p>
               </div>
               <div class="left-about-info">
               <h2>Feel Free <i class="fab fa-fly"></i></h2> 
               <hr>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus officia dignissimos rem blanditiis sed vero, labore eum sint numquam, alias similique architecto eaque distinctio quis minima dolore dolores possimus consequuntur.</p>
+              <p>Go hiking, breathing fresh air while exercising and socialising will clear your head of excess thoughts that permeate your subconscious mind. This will greatly improve your ability to be in the moment when talking to others, instead of filtering your thoughts.</p>
               </div>
 
         </div>
