cleared unnecessary divs

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
                 It's good for you, too. Hiking is a powerful cardio workout that can:
                 
-                    Lower your risk of heart disease
-                    Improve your blood pressure and blood sugar levels
-                    Boost bone density, since walking is a weight-bearing exercise
-                    Build strength in your glutes, quadriceps, hamstrings, and the muscles in your hips and lower legs
+                    Lower your risk of heart disease amd 
+                    improve your blood pressure and blood sugar levels.
+                    Boost bone density, since walking is a weight-bearing exercise and
+                    build strength in your glutes, quadriceps, hamstrings, and the muscles in your hips and lower legs
                     Strengthen your core</p>
               </div>
               <div class="left-about-info">
